<resources>
    <string name="app_name">Curriculum Vitae 2</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="next">next</string>
    <string name="skills">Skills</string>
    <string name="Skills">SKILLS</string>
    <string name="ios">iOS</string>
    <string name="android">Android</string>
</resources>